Протестировано создание персонажа и нескольких Вакантных кейсов. Добавлены вспомогательные переменные. Метод QuestConstructor.chooseQuest переименован в chooseReceivedQuest В enum QuestValuesVariants переписаны minKeyStage, constantValue и randomValue, чтобы избежать ошибки создания ключевого этапа с порядковым номером больше чем количество этапов в квесте В Starter.updateGameData добавлен кейс получения списка доступных персонажу вакантных квестов vacantQuestsList